Fix grid-gap issue

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -249,7 +249,7 @@ header {
             }
         }
         @media screen and (min-width: $breakpoint){
-            grid-template-columns: repeat(4, 25%);
+            grid-template-columns: repeat(4, 1fr);
             grid-template-rows: repeat(3, min-content);
             grid-gap:15px;
             .plante{
